Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/Decision_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Decision_Comments_c__c</fullName>
    <label>Decision_Comments__c</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>