Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>End_Date_c__c</fullName>
    <description>End_Date__c</description>
    <label>End_Date__c</label>
    <type>Date</type>
</CustomField>