Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Manager_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager__c</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Off_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>