Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_c__c</fullName>
    <description>Reason__c</description>
    <label>Reason__c</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>