Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/Requester_c__c.field-meta.xml
<CustomField>
    <fullName>Requester_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester__c</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Off_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>