Salesforce /unpackaged/main/default/objects/Time_Off_Request__c/fields/Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_c__c</fullName>
    <description>Start_Date__c</description>
    <label>Start_Date__c</label>
    <type>Date</type>
</CustomField>